fixed missing images

--- a/demo/.gitignore
+++ b/demo/.gitignore
@@ -12,7 +12,6 @@ Cargo.lock
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
-
-*.png
+plot.png
 *_mix.mp3
 *_ica.mp3
